...
class EmbeddedBitrefillUrl {
  EmbeddedBitrefillUrl({
    required this.baseUrl,
    required this.referralCode,
    this.theme = 'dark',
    this.language = 'en',
    this.companyName = 'P2Pirate',
    this.showPaymentInfo = false,
    this.refundAddress,
    this.paymentMethods,
  });

  /// The base URL to the embedded Bitrefill widget, excluding query parameters.
...
